Add unit tests for the top-k plan nodes and sort resolution
LanceTopKTests and LanceHitShapeTests pin the row types, row
estimates, digests and the scan push preconditions (a top-k combines
with a pushed filter, never with a pushed aggregate).
PushSortLimitIntoLanceScanTests covers the score and column folds, the
search_after cursor bound SQL, and the shapes that pass (mixed score
and column sort, unorderable list column, untypeable cursors).
SortResolutionTests pins the collation mapping (directions, missing,
the keyword sub-field to its base column, the score column) and every
refusal message. SearchRequestToRelTests moves to the hits envelope
(positive size translates, aggregations require size 0) and the
explain IT follows the new message.

Signed-off-by: Sotaro Hikita <bering1814@gmail.com>